--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "require": {
         "twig/twig": "~3.0",
       "ext-pdo": "*",
-      "ext-json": "*"
+      "ext-json": "*",
+        "symfony/finder": "^6.1",
+        "php": ">= 8.1.0"
+
     },
     "autoload": {
         "psr-4": {
